--- a/app/src/main/res/layout/fragment_lk.xml
+++ b/app/src/main/res/layout/fragment_lk.xml
@@ -139,6 +139,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/FiotextView" />
 
+        <ImageButton
+            android:id="@+id/exitImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:src="@android:drawable/ic_media_rew"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
