--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -6,23 +6,8 @@
     android:layout_height="match_parent"
     >
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="276dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/philosopher"
-        android:gravity="center"
-        android:text="согласие"
-        app:layout_constraintBottom_toTopOf="@+id/to_registr_but"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditTextParol"
-        app:layout_constraintVertical_bias="0.207" />
-
     <EditText
-        android:id="@+id/emailEditTextImya"
+        android:id="@+id/NIckNamelEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -36,7 +21,7 @@
         android:drawableTint="#19C179"
         android:drawingCacheQuality="high"
         android:fontFamily="@font/philosopher"
-        android:hint="Имя"
+        android:hint="Никнейм"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:textColor="#C4C4C4"
@@ -46,7 +31,7 @@
 
 
     <EditText
-        android:id="@+id/emailEditTextFamili"
+        android:id="@+id/UserFioEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -58,17 +43,17 @@
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
         android:fontFamily="@font/philosopher"
-        android:hint="Фамилия"
+        android:hint="Имя"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:textColor="#C4C4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditTextImya" />
+        app:layout_constraintTop_toBottomOf="@+id/NIckNamelEditText" />
 
 
-    <EditText
-        android:id="@+id/emailEditTextPochta"
+    <AutoCompleteTextView
+        android:id="@+id/CityAutoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -80,22 +65,21 @@
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
         android:fontFamily="@font/philosopher"
-        android:hint="Почта"
+        android:hint="Начните вводить город"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:textColor="#C4C4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditTextFamili" />
+        app:layout_constraintTop_toBottomOf="@+id/UserFioEditText" />
 
 
     <EditText
-        android:id="@+id/emailEditTextParol"
+        android:id="@+id/passwordEditTextRegFrag"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="44dp"
-
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/login_shape"
         android:drawableStart="@drawable/chelovechekxml"
@@ -107,9 +91,30 @@
         android:maxLines="1"
         android:textColor="#C4C4C4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditTextPochta" />
+        app:layout_constraintTop_toBottomOf="@+id/CityAutoCompleteTextView" />
 
+    <EditText
+        android:id="@+id/confirmPasswordEditTextRegFrag"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/login_shape"
+        android:drawableStart="@drawable/chelovechekxml"
+        android:drawablePadding="20dp"
+        android:drawableTint="#19C179"
+        android:fontFamily="@font/philosopher"
+        android:hint="Подтвердите пароль"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
+        android:textColor="#C4C4C4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegFrag" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/to_registr_but"
@@ -117,12 +122,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
         android:background="@drawable/button_rounded"
-        android:text="Сохранить"
+        android:text="Регистрация"
         android:textAllCaps="false"
 
         android:textColor="#FEFEFF"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditTextParol"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegFrag"
         tools:layout_editor_absoluteX="0dp" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -154,4 +159,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
