--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,7 @@
     </fragment>
     <activity
         android:id="@+id/avtarization"
-        android:name="com.example.wallet.ui.avtarization"
+        android:name="com.example.wallet.ui.avtarization.avtarization"
         android:label="activity_avtorizationn"
         tools:layout="@layout/activity_avtorizationn" />
 </navigation>
