--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -20,7 +20,7 @@
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
         android:drawingCacheQuality="high"
-        android:fontFamily="@font/philosopher"
+        android:fontFamily="@font/poppins_semibold"
         android:hint="Никнейм"
         android:inputType="textEmailAddress"
         android:maxLines="1"
@@ -42,7 +42,7 @@
         android:drawableStart="@drawable/chelovechekxml"
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
-        android:fontFamily="@font/philosopher"
+        android:fontFamily="@font/poppins_semibold"
         android:hint="Имя"
         android:inputType="textEmailAddress"
         android:maxLines="1"
@@ -64,7 +64,7 @@
         android:drawableStart="@drawable/chelovechekxml"
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
-        android:fontFamily="@font/philosopher"
+        android:fontFamily="@font/poppins_semibold"
         android:hint="Начните вводить город"
         android:inputType="textEmailAddress"
         android:maxLines="1"
@@ -85,7 +85,7 @@
         android:drawableStart="@drawable/chelovechekxml"
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
-        android:fontFamily="@font/philosopher"
+        android:fontFamily="@font/poppins_semibold"
         android:hint="Пароль"
         android:inputType="textEmailAddress"
         android:maxLines="1"
@@ -106,7 +106,7 @@
         android:drawableStart="@drawable/chelovechekxml"
         android:drawablePadding="20dp"
         android:drawableTint="#19C179"
-        android:fontFamily="@font/philosopher"
+        android:fontFamily="@font/poppins_semibold"
         android:hint="Подтвердите пароль"
         android:inputType="textEmailAddress"
         android:maxLines="1"
@@ -122,9 +122,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
         android:background="@drawable/button_rounded"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Регистрация"
-        android:textAllCaps="false"
 
+        android:textAllCaps="false"
         android:textColor="#FEFEFF"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegFrag"
@@ -136,8 +137,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:background="@drawable/button_rounded"
-        android:text="Вернуться"
+        android:fontFamily="@font/poppins_semibold"
 
+        android:text="Вернуться"
         android:textAllCaps="false"
         android:textColor="#FEFEFF"
         android:textSize="20dp"
@@ -151,7 +153,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/philosopher"
+        android:fontFamily="@font/poppins_semibold"
         android:text=" Регистрация"
         android:textColor="#3B3B3B"
         android:textSize="24dp"
