--- a/app/src/main/res/layout/item_balans.xml
+++ b/app/src/main/res/layout/item_balans.xml
@@ -10,7 +10,9 @@
         android:layout_width="215dp"
         android:layout_height="47dp"
         android:layout_marginEnd="68dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BankNameTextView" />
 
@@ -21,6 +23,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="132dp"
         android:text="TextView"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
