--- a/app/src/main/res/layout/item_main_friends.xml
+++ b/app/src/main/res/layout/item_main_friends.xml
@@ -19,6 +19,7 @@
         android:layout_width="144dp"
         android:layout_height="26dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/frendsItemCapital"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +30,7 @@
         android:layout_height="24dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/frendsItemAvatar"
         app:layout_constraintTop_toBottomOf="@+id/frendsItemName" />
@@ -38,6 +40,7 @@
         android:layout_width="116dp"
         android:layout_height="30dp"
         android:layout_marginTop="12dp"
+        android:fontFamily="@font/poppins_semibold"
         android:gravity="center_horizontal"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
