--- a/app/src/main/res/layout/item_rankings_region.xml
+++ b/app/src/main/res/layout/item_rankings_region.xml
@@ -17,8 +17,9 @@
         android:layout_width="0dp"
         android:layout_height="38dp"
         android:layout_marginEnd="40dp"
-        android:gravity="center|center_horizontal|center_vertical"
         android:layout_weight="2"
+        android:fontFamily="@font/poppins_semibold"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="TextView" />
 
 </LinearLayout>
