--- a/app/src/main/res/layout/person_dialog.xml
+++ b/app/src/main/res/layout/person_dialog.xml
@@ -7,112 +7,129 @@
     android:layout_height="match_parent"
     tools:context=".PersonDialog.PersonDialogFragment">
 
-    <HorizontalScrollView
-        android:id="@+id/scrollView2"
+    <ProgressBar
+        android:id="@+id/progressBarPersonDialog"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/personDialogConstraintLayout"
+
+
+        <HorizontalScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="@+id/scrollView2">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="0dp">
 
-            <Button
-                android:id="@+id/AddTofriend"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/personDialogConstraintLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="Подписаться"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textviewCapital" />
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="@+id/scrollView2">
 
-            <TextView
-                android:id="@+id/textviewCapital"
-                android:layout_width="120dp"
-                android:layout_height="42dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginTop="40dp"
-                android:text="Капитал:"
-                android:textSize="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                <Button
+                    android:id="@+id/AddTofriend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Подписаться"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textviewCapital" />
 
-            <ImageView
-                android:id="@+id/AvatarImageView"
-                android:layout_width="173dp"
-                android:layout_height="132dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/avatar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/textviewCapital"
+                    android:layout_width="120dp"
+                    android:layout_height="42dp"
+                    android:layout_marginStart="56dp"
+                    android:layout_marginTop="40dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Капитал:"
+                    android:textSize="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-            <TextView
-                android:id="@+id/FiotextView"
-                android:layout_width="345dp"
-                android:layout_height="42dp"
-                android:layout_marginTop="12dp"
-                android:gravity="center|center_vertical"
-                android:text="Иванов Иван Иванович "
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/AvatarImageView" />
+                <ImageView
+                    android:id="@+id/AvatarImageView"
+                    android:layout_width="173dp"
+                    android:layout_height="132dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/avatar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/FiotextView"
+                    android:layout_width="345dp"
+                    android:layout_height="42dp"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center|center_vertical"
+                    android:text="Иванов Иван Иванович "
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/AvatarImageView" />
 
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="126dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginTop="28dp"
-                android:gravity="center|start"
-                android:text="Друзья:"
-                android:textSize="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/CityTextView" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="126dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="56dp"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center|start"
+                    android:text="Друзья:"
+                    android:textSize="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/CityTextView" />
 
-            <Button
-                android:id="@+id/friendCaount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="28dp"
-                android:text="0"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/CityTextView" />
+                <Button
+                    android:id="@+id/friendCaount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="28dp"
+                    android:text="0"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/CityTextView" />
 
-            <Button
-                android:id="@+id/freindButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="28dp"
-                android:text="0"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/friendCaount" />
+                <Button
+                    android:id="@+id/freindButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="28dp"
+                    android:text="0"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/friendCaount" />
 
-            <TextView
-                android:id="@+id/CityTextView"
-                android:layout_width="171dp"
-                android:layout_height="31dp"
-                android:layout_marginTop="28dp"
-                android:gravity="center"
-                android:text="Город"
-                android:textSize="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/FiotextView" />
+                <TextView
+                    android:id="@+id/CityTextView"
+                    android:layout_width="171dp"
+                    android:layout_height="31dp"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center"
+                    android:text="Город"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/FiotextView" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </HorizontalScrollView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
