--- a/app/src/main/res/layout/item_rankings_region.xml
+++ b/app/src/main/res/layout/item_rankings_region.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="35dp"
+    android:background="@color/black"
+    >
 
-    <ImageView
-        android:id="@+id/ItemRankingsRegionimageView"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="32dp"
-        android:layout_weight="1"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/zakrugl"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/ItemRankingsRegiontextView"
-        android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginEnd="40dp"
-        android:layout_weight="2"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/ItemRankingsRegiontextView"
+            android:layout_width="138dp"
+            android:layout_height="33dp"
+            android:layout_weight="2"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.978"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
