--- a/app/src/main/res/drawable/bg_spinner_fruit.xml
+++ b/app/src/main/res/drawable/bg_spinner_fruit.xml
@@ -6,22 +6,18 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="#FFFFFF"/>
+                    <solid android:color="@color/black"/>
                     <padding android:right="12dp"
                                 android:left="12dp"/>
                     <corners android:radius="15dp"/>
-                    <stroke android:color="#F4F4F4" ></stroke>
+                    <stroke android:color="@color/black" ></stroke>
                     <stroke android:width="1dp"></stroke>
                 </shape>
 
             </item>
 
 
-            <item
-                android:right="10dp"
-                android:drawable="@drawable/svg_galochka"
-                android:gravity="center_vertical|end"
-                />
+
 
         </layer-list>
 
