--- a/app/src/main/res/layout/fragment_frends.xml
+++ b/app/src/main/res/layout/fragment_frends.xml
@@ -5,14 +5,15 @@
     android:id="@+id/homeFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    android:background="@color/black"
+    tools:context=".ui.home.FriendsFragment">
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshHomeFragment"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="84dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -28,12 +29,13 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="164dp"
-        android:layout_height="62dp"
+        android:layout_width="161dp"
+        android:layout_height="47dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="Ваши друзья:"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
