--- a/app/src/main/res/layout/fragment_lk.xml
+++ b/app/src/main/res/layout/fragment_lk.xml
@@ -75,7 +75,7 @@
                     android:id="@+id/AvatarImageView"
                     android:layout_width="173dp"
                     android:layout_height="132dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="28dp"
 
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,13 +85,14 @@
                     android:id="@+id/FiotextView"
                     android:layout_width="345dp"
                     android:layout_height="42dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="20dp"
                     android:fontFamily="@font/poppins_semibold"
                     android:gravity="center|center_vertical"
                     android:text="Иванов Иван Иванович "
                     android:textColor="#FFFFFF"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.515"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/AvatarImageView" />
 
@@ -106,7 +107,7 @@
                     android:textColor="#FFFFFF"
                     android:textSize="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.1"
+                    app:layout_constraintHorizontal_bias="0.101"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/PlaceInFriendTextView" />
 
@@ -120,14 +121,18 @@
 
                 <Button
                     android:id="@+id/freindButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="44dp"
                     android:layout_marginEnd="20dp"
+                    android:backgroundTint="@color/black"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="45"
 
+                    android:text="45"
+                    app:cornerRadius="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/buttonPlaceInFriend" />
+                    app:layout_constraintTop_toBottomOf="@+id/buttonPlaceInFriend"
+                    app:strokeColor="@color/seriy"
+                    app:strokeWidth="2dp" />
 
                 <TextView
                     android:id="@+id/PlaceInFriendTextView"
@@ -146,21 +151,25 @@
 
                 <Button
                     android:id="@+id/buttonPlaceInFriend"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="44dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:backgroundTint="@color/black"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="14"
+                    app:cornerRadius="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/FiotextView" />
+                    app:layout_constraintTop_toBottomOf="@+id/FiotextView"
+                    app:strokeColor="@color/seriy"
+                    app:strokeWidth="2dp" />
 
                 <ImageButton
 
                     android:id="@+id/exitImageButton"
                     android:layout_width="76dp"
                     android:layout_height="62dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="5dp"
                     android:backgroundTint="#14161B"
                     android:scaleType="fitCenter"
