--- a/app/src/main/res/layout/fragment_rankings.xml
+++ b/app/src/main/res/layout/fragment_rankings.xml
@@ -5,31 +5,40 @@
     android:id="@+id/fragmentRangingsConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".ui.rankings.rankingsFragment">
+
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="133dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Выберите область"
+        android:gravity="center"
+        android:text="Выберите область:"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayoutRankingsFragment"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="564dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerRegion">
+        app:layout_constraintTop_toBottomOf="@+id/spinnerRegion"
+        app:layout_constraintVertical_bias="0.285">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RangingsRecyclerView"
-            android:layout_width="412dp"
-            android:layout_height="420dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="48dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinnerRegion" />
@@ -38,28 +47,28 @@
 
     <com.example.wallet.ui.rankings.CustomSpinner
         android:id="@+id/spinnerRegion"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginTop="112dp"
+        android:layout_width="154dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/bg_spinner_fruit"
+        android:clickable="true"
         android:paddingTop="10dp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="parent">
 
     </com.example.wallet.ui.rankings.CustomSpinner>
 
-
-
     <ImageButton
         android:id="@+id/searchImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:src="@android:drawable/ic_menu_search"
+        android:layout_width="84dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/black"
+        android:scaleType="centerInside"
+        android:src="@drawable/search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
