--- a/app/src/main/res/layout/item_main_friends.xml
+++ b/app/src/main/res/layout/item_main_friends.xml
@@ -3,24 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="70dp">
 
     <ImageView
         android:id="@+id/frendsItemAvatar"
         android:layout_width="64dp"
         android:layout_height="54dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/frendsItemName"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/frendsItemName"
-        android:layout_width="144dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="20dp"
+        android:layout_width="143dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="48dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/frendsItemCapital"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,21 +32,27 @@
         android:id="@+id/frendsItemPlace"
         android:layout_width="60dp"
         android:layout_height="24dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
+        android:textColor="#7E848D"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frendsItemAvatar"
-        app:layout_constraintTop_toBottomOf="@+id/frendsItemName" />
+        app:layout_constraintTop_toBottomOf="@+id/frendsItemName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/frendsItemCapital"
-        android:layout_width="116dp"
-        android:layout_height="30dp"
+        android:layout_width="113dp"
+        android:layout_height="44dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins_semibold"
-        android:gravity="center_horizontal"
+        android:gravity="center_horizontal|center_vertical"
         android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
